--- a/g.html
+++ b/g.html
@@ -8,106 +8,145 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* Custom Styling */
-        body {
-            background-color: #f5f7fa;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        .calculator-card {
-            background-color: #ffffff;
-            border-radius: 10px;
-            padding: 2rem;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-top: 1rem;
-        }
-        .form-label {
-            font-weight: 500;
-        }
-        .btn-primary {
-            background-color: #000;
-            border-color: #000;
-            transition: background-color 0.3s ease-in-out;
-        }
-        .btn-primary:hover {
-            background-color: #333;
-        }
-        .btn-outline-primary {
-            border-color: #000;
-            color: #000;
-        }
-        .btn-outline-primary:hover {
-            background-color: #000;
-            color: #fff;
-        }
-        .navbar {
-            padding: 1rem 1.5rem; /* Add padding for better spacing */
-            background-color: #e9ecef; /* Light gray background */
-            position: sticky; /* Make navbar sticky */
-            top: 0; /* Stick to the top */
-            z-index: 1000; /* Ensure it stays above other content */
-        }
-        .nav-link {
-            font-size: 1.1rem; /* Increase font size */
-            transition: color 0.3s; /* Smooth transition for hover effect */
-        }
-        .nav-link:hover {
-            color: #007bff; /* Change color on hover */
-        }
-        .navbar-brand h2 {
-            font-size: 1.5rem; /* Adjust brand font size */
-            margin: 0; /* Remove bottom margin */
-        }
-        footer {
-            margin-top: 2rem;
-            padding: 1rem;
-            background-color: #f8f9fa;
-            text-align: center;
-            font-size: 0.9rem;
-            color: #6c757d;
-        }
-        /* Centering the title */
-        .calculator-card h2 {
-            text-align: center; /* Center the title */
-        }
-        /* Hide square border around the toggler */
-        .navbar-toggler {
-            border: none;
-            outline: none;
-        }
-        /* Hamburger to X animation */
-        .navbar-toggler-icon {
-            position: relative;
-            width: 30px;
-            height: 2px;
-            background-color: #000;
-            display: inline-block;
-            transition: all 0.3s ease-in-out;
-        }
-        .navbar-toggler-icon::before,
-        .navbar-toggler-icon::after {
-            content: '';
-            position: absolute;
-            width: 30px;
-            height: 2px;
-            background-color: #000;
-            transition: all 0.3s ease-in-out;
-        }
-        .navbar-toggler-icon::before {
-            top: -8px;
-        }
-        .navbar-toggler-icon::after {
-            top: 8px;
-        }
-        .navbar-toggler.active .navbar-toggler-icon {
-            background-color: transparent;
-        }
-        .navbar-toggler.active .navbar-toggler-icon::before {
-            transform: rotate(45deg);
-            top: 0;
-        }
-        .navbar-toggler.active .navbar-toggler-icon::after {
-            transform: rotate(-45deg);
-            top: 0;
-        }
+        /* General Body Styling */
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f8f9fa; /* Light grey background */
+    color: #333;
+    padding: 0;
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Navbar Styling */
+.navbar {
+    background-color: #ffffff;
+    padding: 10px 15px;
+    border-bottom: 1px solid #ddd;
+}
+
+/* Navbar Brand */
+.navbar-brand {
+    font-weight: bold;
+    font-size: 1.25rem;
+    color: #333;
+}
+
+.navbar-brand img {
+    max-width: 40px;
+    margin-right: 10px;
+}
+
+/* Bond Calculator Styling */
+.card {
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.card-header {
+    background-color: #007bff;
+    color: white;
+    border-bottom: none;
+    font-size: 1.25rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+.card-body {
+    padding: 30px;
+}
+
+.form-control {
+    border-radius: 6px;
+    border: 1px solid #ddd;
+    padding: 12px;
+    margin-bottom: 20px;
+    font-size: 1rem;
+}
+
+.btn {
+    background-color: #000;
+    border-radius: 6px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    width: 100%;
+    color: white;
+}
+
+.btn:hover {
+    background-color: #333;
+}
+
+/* Modal Styling */
+.modal-header {
+    background-color: #007bff;
+    color: white;
+}
+
+.modal-footer .btn {
+    background-color: #007bff;
+    color: white;
+}
+
+/* Hamburger Icon Styling */
+.navbar-toggler-icon {
+    position: relative;
+    width: 24px;
+    height: 2px;
+    background-color: #000;
+    display: inline-block;
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar-toggler-icon::before,
+.navbar-toggler-icon::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #000;
+    transition: all 0.3s ease-in-out;
+}
+
+.navbar-toggler-icon::before {
+    top: -8px;
+}
+
+.navbar-toggler-icon::after {
+    bottom: -8px;
+}
+
+.navbar-toggler.collapsed .navbar-toggler-icon {
+    background-color: transparent;
+}
+
+.navbar-toggler.collapsed .navbar-toggler-icon::before {
+    transform: rotate(45deg);
+    top: 0;
+}
+
+.navbar-toggler.collapsed .navbar-toggler-icon::after {
+    transform: rotate(-45deg);
+    bottom: 0;
+}
+
+/* Responsive: Center content on smaller screens */
+@media (max-width: 768px) {
+    .container {
+        max-width: 100%;
+    }
+    
+    .navbar {
+        padding: 10px;
+    }
+    
+    .card {
+        margin-top: 20px;
+        padding: 10px;
+    }
+}
     </style>
 </head>
 <body>
