--- a/g.html
+++ b/g.html
@@ -7,107 +7,121 @@
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Custom Styling */
-        body {
-            background-color: #f5f7fa;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        .calculator-card {
-            background-color: #ffffff;
-            border-radius: 10px;
-            padding: 2rem;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-top: 1rem;
-        }
-        .form-label {
-            font-weight: 500;
-        }
-        .btn-primary {
-            background-color: #000;
-            border-color: #000;
-            transition: background-color 0.3s ease-in-out;
-        }
-        .btn-primary:hover {
-            background-color: #333;
-        }
-        .btn-outline-primary {
-            border-color: #000;
-            color: #000;
-        }
-        .btn-outline-primary:hover {
-            background-color: #000;
-            color: #fff;
-        }
-        .navbar {
-            background-color: #ffffff;
-            padding: 1rem;
-        }
-        .navbar-brand img {
-            height: 40px;
-        }
-        .form-check-input {
-            border-radius: 50%;
-        }
-        input:invalid {
-            border-color: black;
-        }
-        input.invalid-input {
-            border-color: red;
-        }
-        footer {
-            background-color: #f8f9fa;
-            padding: 1rem 0;
-            text-align: center;
-            margin-top: 2rem;
-        }
-        .offcanvas-body {
-            padding: 1rem;
-        }
-    </style>
+    /* Custom Styling */
+    body {
+        background-color: #f5f7fa;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .calculator-card {
+        background-color: #ffffff;
+        border-radius: 10px;
+        padding: 2rem;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin-top: 1rem;
+    }
+    .form-label {
+        font-weight: 500;
+    }
+    .btn-primary {
+        background-color: #000;
+        border-color: #000;
+        transition: background-color 0.3s ease-in-out;
+    }
+    .btn-primary:hover {
+        background-color: #333;
+    }
+    .btn-outline-primary {
+        border-color: #000;
+        color: #000;
+    }
+    .btn-outline-primary:hover {
+        background-color: #000;
+        color: #fff;
+    }
+    .navbar {
+        padding: 1rem 1.5rem; /* Add padding for better spacing */
+        background-color: #f8f9fa; /* Light gray background */
+    }
+    .nav-link {
+        font-size: 1.1rem; /* Increase font size */
+        transition: color 0.3s; /* Smooth transition for hover effect */
+    }
+    .nav-link:hover {
+        color: #007bff; /* Change color on hover */
+    }
+    .navbar-brand h2 {
+        font-size: 1.5rem; /* Adjust brand font size */
+        margin: 0; /* Remove bottom margin */
+    }
+    footer {
+        margin-top: 2rem;
+        padding: 1rem;
+        background-color: #f8f9fa;
+        text-align: center;
+        font-size: 0.9rem;
+        color: #6c757d;
+    }
+    /* Centering the title */
+    .calculator-card h2 {
+        text-align: center; /* Center the title */
+    }
+
+    /* Custom Toggler Styles */
+    .navbar-toggler {
+        border: none; /* Remove border */
+    }
+
+    .navbar-toggler-icon {
+        background-image: none; /* Remove default icon */
+    }
+
+    /* Create a custom icon for the toggler */
+    .navbar-toggler::after {
+        content: "☰"; /* Unicode character for hamburger icon */
+        font-size: 24px; /* Adjust size as needed */
+        color: #000; /* Icon color */
+    }
+</style>
 </head>
 <body>
 
     <!-- Top Navbar -->
-    <nav class="navbar navbar-light border-bottom">
-        <a class="navbar-brand" href="#">
-            <img src="https://via.placeholder.com/40" alt="Logo"> <!-- Add your logo URL -->
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </nav>
-
-    <!-- Offcanvas Sidebar (Hamburger Menu) -->
-    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-        <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
+<nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #f8f9fa;">
+    <a class="navbar-brand d-flex align-items-center" href="#">
+        <img src="img/logo.png" alt="Logo" class="me-2" style="width: 40px; height: auto;"> <!-- Adjust logo size -->
+        <h2 class="mb-0">123 Bank Plc</h2>
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="border: none;">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+            </li>
+        </ul>
     </div>
+</nav>
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-6">
+            <div class="col-lg-6 col-md-8 col-12">
                 <div class="calculator-card">
-                    <h2 class="mb-4">Loan details</h2>
+                    <h2 class="mb-4">Bond Calculator</h2>
                     <!-- Bond Calculator Form -->
-                    <form id="bondForm" class="mt-4">
+                    <form id="bondForm" class="mt-4 needs-validation" novalidate>
                         <div class="mb-3">
                             <label for="faceValue" class="form-label">Total Bond Amount (TZS)</label>
                             <input type="text" class="form-control" id="faceValue" placeholder="Enter bond's face value" required>
+                            <div class="invalid-feedback">
+                                Please enter a valid bond amount.
+                            </div>
                         </div>
 
                         <div class="mb-3">
@@ -116,20 +130,23 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="yearsToMaturity" class="form-label">Loan Term in Years</label>
-                            <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" required>
+                            <label for="yearsToMaturity" class="form-label">Bond Term in Years</label>
+                            <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" min="1" required>
                         </div>
 
                         <div class="mb-3">
                             <label for="paymentFrequency" class="form-label">Coupon Payment Frequency</label>
                             <select class="form-select" id="paymentFrequency" required>
+                                <option value="" disabled selected>Select frequency</option>
                                 <option value="1">Annually</option>
                                 <option value="2">Semi-Annually</option>
                                 <option value="4">Quarterly</option>
                             </select>
+                            <div class="invalid-feedback">
+                                Please select a payment frequency.
+                            </div>
                         </div>
 
-                        <!-- Checkbox example -->
                         <div class="form-check mb-3">
                             <input class="form-check-input" type="checkbox" value="" id="initiationFee">
                             <label class="form-check-label" for="initiationFee">
@@ -183,7 +200,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>Bond Calculator &copy; 2024</p>
+        <p>Bond Calculator - 123 Bank Plc &copy; 2024</p>
     </footer>
 
     <!-- Bootstrap 5 JS and dependencies -->
@@ -191,55 +208,70 @@
 
     <!-- Custom Script -->
     <script>
-        // Format input with commas as the user types in the face value field
-        const faceValueInput = document.getElementById('faceValue');
-        faceValueInput.addEventListener('input', function() {
-            let value = this.value.replace(/,/g, '');
-            this.value = new Intl.NumberFormat().format(value);
+        // Form validation
+        (function () {
+            'use strict';
+            const forms = document.querySelectorAll('.needs-validation');
+
+            Array.prototype.slice.call(forms).forEach(function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (!form.checkValidity()) {
+                        event.preventDefault();
+                        event.stopPropagation();
+                    }
+                    form.classList.add('was-validated');
+                }, false);
+            });
+        })();
+
+        // Function to format number with commas
+        function formatNumber(num) {
+            return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+        }
+
+        document.getElementById('faceValue').addEventListener('input', function () {
+            // Remove non-digit characters
+            let value = this.value.replace(/[^0-9]/g, '');
+            // Format with commas
+            this.value = formatNumber(value);
         });
 
-        // Form validation without showing error initially
         document.getElementById('bondForm').addEventListener('submit', function (event) {
             event.preventDefault();
 
-            let isValid = true;
-            const requiredFields = ['faceValue', 'couponRate', 'yearsToMaturity', 'paymentFrequency'];
-            
-            requiredFields.forEach(id => {
-                const input = document.getElementById(id);
-                if (!input.value) {
-                    input.classList.add('invalid-input');
-                    isValid = false;
-                } else {
-                    input.classList.remove('invalid-input');
-                }
-            });
+            // Get form values
+            const faceValue = parseFloat(document.getElementById('faceValue').value.replace(/,/g, '')); // Remove commas for calculation
+            const couponRate = parseFloat(document.getElementById('couponRate').value) / 100;
+            const yearsToMaturity = parseFloat(document.getElementById('yearsToMaturity').value);
+            const paymentFrequency = parseFloat(document.getElementById('paymentFrequency').value);
 
-            if (!isValid) {
+            if (isNaN(faceValue) || isNaN(couponRate) || isNaN(yearsToMaturity) || isNaN(paymentFrequency)) {
+                alert('Please fill in all required fields.');
                 return;
             }
 
-            // Get form values
-            const faceValue = parseFloat(document.getElementById('faceValue').value.replace(/,/g, ''));
-            const couponRate = parseFloat(document.getElementById('couponRate').value);
-            const yearsToMaturity = parseInt(document.getElementById('yearsToMaturity').value);
-            const paymentFrequency = parseInt(document.getElementById('paymentFrequency').value);
+            // Calculate annual coupon payment
+            const annualCouponPayment = faceValue * couponRate;
 
-            // Perform calculations and show results in the modal
-            const annualCoupon = faceValue * (couponRate / 100);
-            const totalInterest = annualCoupon * yearsToMaturity;
+            // Calculate total interest over the life of the bond
+            const totalInterest = annualCouponPayment * yearsToMaturity;
+
+            // Total Bond Value (Face Value + Interest Earned)
             const totalBondValue = faceValue + totalInterest;
-            const totalFutureValue = totalBondValue;
 
-            document.getElementById('annualCoupon').textContent = new Intl.NumberFormat().format(annualCoupon);
-            document.getElementById('totalInterest').textContent = new Intl.NumberFormat().format(totalInterest);
-            document.getElementById('totalBondValue').textContent = new Intl.NumberFormat().format(totalBondValue);
-            document.getElementById('totalFutureValue').textContent = new Intl.NumberFormat().format(totalFutureValue);
+            // Total Future Value assuming reinvestment (basic example)
+            const totalFutureValue = faceValue * Math.pow((1 + couponRate / paymentFrequency), paymentFrequency * yearsToMaturity);
 
-            // Show modal
-            new bootstrap.Modal(document.getElementById('resultModal')).show();
+            // Update modal content
+            document.getElementById('annualCoupon').innerText = `TZS ${formatNumber(annualCouponPayment.toFixed(2))}`;
+            document.getElementById('totalInterest').innerText = `TZS ${formatNumber(totalInterest.toFixed(2))}`;
+            document.getElementById('totalBondValue').innerText = `TZS ${formatNumber(totalBondValue.toFixed(2))}`;
+            document.getElementById('totalFutureValue').innerText = `TZS ${formatNumber(totalFutureValue.toFixed(2))}`;
+
+            // Show the modal
+            const resultModal = new bootstrap.Modal(document.getElementById('resultModal'));
+            resultModal.show();
         });
     </script>
-
 </body>
 </html>
