--- a/g.html
+++ b/g.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,146 +8,210 @@
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-    /* Custom Styling */
-    body {
-        background-color: #f5f7fa;
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    .calculator-card {
-        background-color: #ffffff;
-        border-radius: 10px;
-        padding: 2rem;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        margin-top: 1rem;
-    }
-    .form-label {
-        font-weight: 500;
-    }
-    .btn-primary {
-        background-color: #000;
-        border-color: #000;
-        transition: background-color 0.3s ease-in-out;
-    }
-    .btn-primary:hover {
-        background-color: #333;
-    }
-    .btn-outline-primary {
-        border-color: #000;
-        color: #000;
-    }
-    .btn-outline-primary:hover {
-        background-color: #000;
-        color: #fff;
-    }
-    .navbar {
-        padding: 1rem 1.5rem; /* Add padding for better spacing */
-        background-color: #f8f9fa; /* Light gray background */
-    }
-    .nav-link {
-        font-size: 1.1rem; /* Increase font size */
-        transition: color 0.3s; /* Smooth transition for hover effect */
-    }
-    .nav-link:hover {
-        color: #007bff; /* Change color on hover */
-    }
-    .navbar-brand h2 {
-        font-size: 1.5rem; /* Adjust brand font size */
-        margin: 0; /* Remove bottom margin */
-    }
-    footer {
-        margin-top: 2rem;
-        padding: 1rem;
-        background-color: #f8f9fa;
-        text-align: center;
-        font-size: 0.9rem;
-        color: #6c757d;
-    }
-    /* Centering the title */
-    .calculator-card h2 {
-        text-align: center; /* Center the title */
-    }
+        /* Custom Styling */
+        body {
+            background-color: #f5f7fa;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
 
-    /* Custom Toggler Styles */
-    .navbar-toggler {
-        border: none; /* Remove border */
-    }
+        .calculator-card {
+            background-color: #ffffff;
+            border-radius: 10px;
+            padding: 2rem;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-top: 1rem;
+        }
 
-    .navbar-toggler-icon {
-        background-image: none; /* Remove default icon */
-    }
+        .form-label {
+            font-weight: 500;
+        }
 
-    /* Create a custom icon for the toggler */
-    .navbar-toggler::after {
-        content: "☰"; /* Unicode character for hamburger icon */
-        font-size: 24px; /* Adjust size as needed */
-        color: #000; /* Icon color */
-    }
-</style>
+        .btn-primary {
+            background-color: #000;
+            border-color: #000;
+            transition: background-color 0.3s ease-in-out;
+        }
+
+        .btn-primary:hover {
+            background-color: #333;
+        }
+
+        .btn-outline-primary {
+            border-color: #000;
+            color: #000;
+        }
+
+        .btn-outline-primary:hover {
+            background-color: #000;
+            color: #fff;
+        }
+
+        .navbar {
+            background-color: #ffffff;
+            padding: 1rem;
+        }
+
+        .navbar-brand img {
+            height: 40px;
+        }
+
+        .form-check-input {
+            border-radius: 50%;
+        }
+
+        input:invalid {
+            border-color: black;
+        }
+
+        input.invalid-input {
+            border-color: red !important;
+        }
+
+        footer {
+            background-color: #f8f9fa;
+            padding: 1rem 0;
+            text-align: center;
+            margin-top: 2rem;
+        }
+
+        .offcanvas-body {
+            padding: 1rem;
+        }
+
+        /* Hamburger Icon Styling */
+        .navbar-toggler-icon {
+            position: relative;
+            width: 24px;
+            height: 2px;
+            background-color: #000;
+            display: inline-block;
+            transition: all 0.3s ease-in-out;
+        }
+
+        .navbar-toggler-icon::before,
+        .navbar-toggler-icon::after {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 2px;
+            background-color: #000;
+            transition: all 0.3s ease-in-out;
+        }
+
+        .navbar-toggler-icon::before {
+            top: -8px;
+        }
+
+        .navbar-toggler-icon::after {
+            bottom: -8px;
+        }
+
+        /* Hamburger Menu Animation (to C) */
+        .navbar-toggler.collapsed .navbar-toggler-icon {
+            background-color: transparent;
+        }
+
+        .navbar-toggler.collapsed .navbar-toggler-icon::before {
+            transform: rotate(45deg);
+            top: 0;
+            border-radius: 50% 50% 0 0;
+            width: 50%;
+        }
+
+        .navbar-toggler.collapsed .navbar-toggler-icon::after {
+            transform: rotate(45deg);
+            bottom: 0;
+            border-radius: 50% 50% 0 0;
+            width: 50%;
+        }
+
+        /* Responsive Centering */
+        @media (max-width: 768px) {
+            .container {
+                max-width: 100%;
+            }
+
+            .navbar {
+                padding: 10px;
+            }
+
+            .calculator-card {
+                margin-top: 20px;
+                padding: 10px;
+            }
+        }
+    </style>
 </head>
+
 <body>
 
     <!-- Top Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color: #f8f9fa;">
-    <a class="navbar-brand d-flex align-items-center" href="#">
-        <img src="img/logo.png" alt="Logo" class="me-2" style="width: 40px; height: auto;"> <!-- Adjust logo size -->
-        <h2 class="mb-0">123 Bank Plc</h2>
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" style="border: none;">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-            </li>
-        </ul>
+    <nav class="navbar navbar-light border-bottom">
+        <a class="navbar-brand" href="#">
+            <img src="https://via.placeholder.com/40" alt="Logo"> <!-- Add your logo URL -->
+        </a>
+        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </nav>
+
+    <!-- Offcanvas Sidebar (Hamburger Menu) -->
+    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
     </div>
-</nav>
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-md-8 col-12">
+            <div class="col-md-6">
                 <div class="calculator-card">
-                    <h2 class="mb-4">Bond Calculator</h2>
+                    <h2 class="mb-4">Loan details</h2>
                     <!-- Bond Calculator Form -->
-                    <form id="bondForm" class="mt-4 needs-validation" novalidate>
+                    <form id="bondForm" class="mt-4">
                         <div class="mb-3">
                             <label for="faceValue" class="form-label">Total Bond Amount (TZS)</label>
-                            <input type="text" class="form-control" id="faceValue" placeholder="Enter bond's face value" required>
-                            <div class="invalid-feedback">
-                                Please enter a valid bond amount.
-                            </div>
+                            <input type="text" class="form-control" id="faceValue" placeholder="Enter bond's face value"
+                                required>
                         </div>
 
                         <div class="mb-3">
                             <label for="couponRate" class="form-label">Coupon Rate (%)</label>
-                            <input type="number" step="0.01" class="form-control" id="couponRate" placeholder="Enter coupon rate" required>
+                            <input type="number" step="0.01" class="form-control" id="couponRate"
+                                placeholder="Enter coupon rate" required>
                         </div>
 
                         <div class="mb-3">
-                            <label for="yearsToMaturity" class="form-label">Bond Term in Years</label>
-                            <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" min="1" required>
+                            <label for="yearsToMaturity" class="form-label">Loan Term in Years</label>
+                            <input type="number" class="form-control" id="yearsToMaturity"
+                                placeholder="Enter years to maturity" required>
                         </div>
 
                         <div class="mb-3">
                             <label for="paymentFrequency" class="form-label">Coupon Payment Frequency</label>
                             <select class="form-select" id="paymentFrequency" required>
-                                <option value="" disabled selected>Select frequency</option>
                                 <option value="1">Annually</option>
                                 <option value="2">Semi-Annually</option>
                                 <option value="4">Quarterly</option>
                             </select>
-                            <div class="invalid-feedback">
-                                Please select a payment frequency.
-                            </div>
                         </div>
 
+                        <!-- Checkbox example -->
                         <div class="form-check mb-3">
                             <input class="form-check-input" type="checkbox" value="" id="initiationFee">
                             <label class="form-check-label" for="initiationFee">
@@ -173,105 +238,99 @@
                 <div class="modal-body">
                     <div class="row">
                         <div class="col-6"><strong>Annual Coupon Payment:</strong></div>
-                        <div class="col-6 text-end"><p id="annualCoupon"></p></div>
+                        <div class="col-6 text-end">
+                            <p id="annualCoupon"></p>
+                        </div>
                     </div>
                     <hr>
                     <div class="row">
                         <div class="col-6"><strong>Total Interest Earned:</strong></div>
-                        <div class="col-6 text-end"><p id="totalInterest"></p></div>
+                        <div class="col-6 text-end">
+                            <p id="totalInterest"></p>
+                        </div>
                     </div>
                     <hr>
                     <div class="row">
                         <div class="col-6"><strong>Total Bond Value:</strong></div>
-                        <div class="col-6 text-end"><p id="totalBondValue"></p></div>
+                        <div class="col-6 text-end">
+                            <p id="totalBondValue"></p>
+                        </div>
                     </div>
                     <hr>
                     <div class="row">
                         <div class="col-6"><strong>Total Future Value:</strong></div>
-                        <div class="col-6 text-end"><p id="totalFutureValue"></p></div>
+                        <div class="col-6 text-end">
+                            <p id="totalFutureValue"></p>
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer>
-        <p>Bond Calculator - 123 Bank Plc &copy; 2024</p>
-    </footer>
-
-    <!-- Bootstrap 5 JS and dependencies -->
+    <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom Script -->
     <script>
-        // Form validation
-        (function () {
-            'use strict';
-            const forms = document.querySelectorAll('.needs-validation');
-
-            Array.prototype.slice.call(forms).forEach(function (form) {
-                form.addEventListener('submit', function (event) {
-                    if (!form.checkValidity()) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                    }
-                    form.classList.add('was-validated');
-                }, false);
-            });
-        })();
-
-        // Function to format number with commas
-        function formatNumber(num) {
-            return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-        }
-
-        document.getElementById('faceValue').addEventListener('input', function () {
-            // Remove non-digit characters
-            let value = this.value.replace(/[^0-9]/g, '');
-            // Format with commas
-            this.value = formatNumber(value);
+        // Format input with commas as the user types in the face value field
+        const faceValueInput = document.getElementById('faceValue');
+        faceValueInput.addEventListener('input', function () {
+            let value = this.value.replace(/,/g, '');
+            this.value = new Intl.NumberFormat().format(value);
         });
 
+        // Form validation without showing error initially
         document.getElementById('bondForm').addEventListener('submit', function (event) {
             event.preventDefault();
 
-            // Get form values
-            const faceValue = parseFloat(document.getElementById('faceValue').value.replace(/,/g, '')); // Remove commas for calculation
-            const couponRate = parseFloat(document.getElementById('couponRate').value) / 100;
-            const yearsToMaturity = parseFloat(document.getElementById('yearsToMaturity').value);
-            const paymentFrequency = parseFloat(document.getElementById('paymentFrequency').value);
+            let isValid = true;
+            const requiredFields = ['faceValue', 'couponRate', 'yearsToMaturity', 'paymentFrequency'];
 
-            if (isNaN(faceValue) || isNaN(couponRate) || isNaN(yearsToMaturity) || isNaN(paymentFrequency)) {
-                alert('Please fill in all required fields.');
+            requiredFields.forEach(id => {
+                const input = document.getElementById(id);
+                if (!input.value) {
+                    input.classList.add('invalid-input');
+                    isValid = false;
+                } else {
+                    input.classList.remove('invalid-input');
+                }
+            });
+
+            if (!isValid) {
                 return;
             }
 
-            // Calculate annual coupon payment
-            const annualCouponPayment = faceValue * couponRate;
+            // Get form values
+            const faceValue = parseFloat(document.getElementById('faceValue').value.replace(/,/g, ''));
+            const couponRate = parseFloat(document.getElementById('couponRate').value);
+            const yearsToMaturity = parseInt(document.getElementById('yearsToMaturity').value);
+            const paymentFrequency = parseInt(document.getElementById('paymentFrequency').value);
 
-            // Calculate total interest over the life of the bond
-            const totalInterest = annualCouponPayment * yearsToMaturity;
-
-            // Total Bond Value (Face Value + Interest Earned)
+            // Perform calculations and show results in the modal
+            const annualCoupon = faceValue * (couponRate / 100);
+            const totalInterest = annualCoupon * yearsToMaturity;
             const totalBondValue = faceValue + totalInterest;
+            const totalFutureValue = totalBondValue;
 
-            // Total Future Value assuming reinvestment (basic example)
-            const totalFutureValue = faceValue * Math.pow((1 + couponRate / paymentFrequency), paymentFrequency * yearsToMaturity);
+            document.getElementById('annualCoupon').textContent = new Intl.NumberFormat().format(annualCoupon);
+            document.getElementById('totalInterest').textContent = new Intl.NumberFormat().format(totalInterest);
+            document.getElementById('totalBondValue').textContent = new Intl.NumberFormat().format(totalBondValue);
+            document.getElementById('totalFutureValue').textContent = new Intl.NumberFormat().format(totalFutureValue);
 
-            // Update modal content
-            document.getElementById('annualCoupon').innerText = `TZS ${formatNumber(annualCouponPayment.toFixed(2))}`;
-            document.getElementById('totalInterest').innerText = `TZS ${formatNumber(totalInterest.toFixed(2))}`;
-            document.getElementById('totalBondValue').innerText = `TZS ${formatNumber(totalBondValue.toFixed(2))}`;
-            document.getElementById('totalFutureValue').innerText = `TZS ${formatNumber(totalFutureValue.toFixed(2))}`;
+            // Show modal
+            new bootstrap.Modal(document.getElementById('resultModal')).show();
+        });
 
-            // Show the modal
-            const resultModal = new bootstrap.Modal(document.getElementById('resultModal'));
-            resultModal.show();
+        // Toggle animation of navbar-toggler icon
+        document.querySelector('.navbar-toggler').addEventListener('click', function () {
+            this.classList.toggle('collapsed');
         });
     </script>
+
 </body>
+
 </html>
